--- a/src/content/styles/Component/Section/sidebar.scss
+++ b/src/content/styles/Component/Section/sidebar.scss
@@ -1,7 +1,7 @@
 #sidebar{
     background-color: grey;
     width: 250px;
-    height: 100vh;
+    height: calc(100vh - 65px);
     padding: 5px 10px;
     nav{
         ul{
