--- a/src/content/styles/Base.scss
+++ b/src/content/styles/Base.scss
@@ -1,6 +1,3 @@
-@import "./Layout/Base";
-@import "./Components/Base";
-
-body{
-    margin: 0;
-}
+@import "Base/_Base.scss";
+@import "Component/_Base.scss";
+@import "Font.scss";
