--- a/src/content/styles/Component/Section/categories.scss
+++ b/src/content/styles/Component/Section/categories.scss
@@ -5,11 +5,17 @@
     .addbar{
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: space-between;
+        margin-bottom: 20px;
         a{
            border: 1px solid black;
            padding: 10px;
            text-decoration: none;
+           &:hover{
+                transform: scale(1.2);
+                color: red;
+                cursor: pointer;
+           }
         }
         
     }
@@ -25,6 +31,7 @@
                 margin: 10px;
                 span{
                     margin-right:5px ;
+                    cursor: pointer;
                 }
             }
 
